[project]
name = "sagicheck"
version = "0.1.0"
description = "Google Maps review sakura/fraud checker API"
authors = [{name = "Codex"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
